--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ sqlparse==0.4.4
 whitenoise==6.5.0
 gunicorn==21.2.0
 django-storages==1.13.1
+psycopg2==2.9.7
+django-heroku==0.3.1
+typing_extensions==4.7.1
