--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
-
+# Hide database inf0
+.database.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+.env
+env
+.vscode
+vscode
+
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -21,12 +27,13 @@ lib64/
 parts/
 sdist/
 var/
-media/stock/
-media/thumbnails/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -41,13 +48,16 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
@@ -56,6 +66,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -73,32 +84,46 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# IPython
+profile_default/
+ipython_config.py
+
 # pyenv
 .python-version
 
-# celery beat schedule file
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
 
-# dotenv
+# Environments
 .env
-env
-
-# virtualenv
 .venv
+my_env
+.my_env
+env/
 venv/
 ENV/
-.vscode
-.vscode/
-myenv/
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
 .spyproject
 
-# Rope project setings
+# Rope project settings
 .ropeproject
 
 # mkdocs documentation
@@ -106,27 +131,8 @@ myenv/
 
 # mypy
 .mypy_cache/
+.dmypy.json
+dmypy.json
 
-Pipfile
-.DS_Store
-*.sqlite3
-*.pyc
-*.db
-*.pid
-.zip
-# django migrations 
-**/migrations/**
-!**/migrations
-!**/migrations/__init__.py
-node_modules
-
-#custom folder
-BK/
-archive/
-
-
-# local_settings
-local_settings.py
-
-# production
-settings_production.py
+# Pyre type checker
+.pyre/
